--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ main {
 
 .cards {
   width: 100%;
-  height: 100%;
+  height: 70%;
   bottom: 0;
   display: flex;
   justify-content: space-around;
@@ -54,7 +54,24 @@ main {
 
 .cards img {
   object-fit: contain;
-  border-radius: 10px;
   width: 230px;
   height: 230px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 20%;
+  height: 45%;
+  background-color: rgb(35, 97, 54);
+  margin: 1em;
+  padding: 1em;
+  border-radius: 25px;
+}
+
+.card a {
+  text-decoration: none;
+  color: white;
 }
