--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
   padding: 0;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .fond {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 video {
@@ -29,14 +34,10 @@ main {
     "Lucida Sans", Arial, sans-serif;
 }
 
-.nav a {
-  padding: 2em;
-  text-decoration: none;
-  color: white;
-}
-
 .title {
-  padding: 2em;
+  padding: 1em;
+  background-color: black;
+  box-shadow: 0px 0px 40px beige;
 }
 
 .cards {
@@ -63,15 +64,73 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  width: 20%;
-  height: 45%;
-  background-color: rgb(35, 97, 54);
+  width: 15%;
+  height: 65%;
+  background-color: gray;
   margin: 1em;
   padding: 1em;
   border-radius: 25px;
+  transition: 1.5s ease-in-out;
+}
+
+.card:hover {
+  transform: rotateY(360deg);
 }
 
 .card a {
   text-decoration: none;
   color: white;
+}
+
+.links a {
+  color: beige;
+  font-size: 22px;
+}
+
+.skill {
+  margin: 5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  height: 30%;
+}
+
+.skill img {
+  object-fit: contain;
+  width: 70px;
+  height: 70px;
+  padding: 1em;
+}
+
+.skillcard {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  margin: 1em;
+  background-color: grey;
+  align-items: center;
+  border-radius: 25px;
+}
+
+.skillcard:hover {
+  transform: rotateY(40deg);
+}
+
+.presentation {
+  background-color: beige;
+  padding: 1em;
+  border-radius: 25px;
+  color: maroon;
+}
+
+.presentation:hover {
+  outline: 1rem solid maroon;
+}
+
+.footer {
+  background-color: maroon;
+  padding: 1rem;
+  border-radius: 25px;
 }
